--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,26 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+
+# Backend (Express)
+backend/node_modules/
+backend/.env
+backend/.env.*.local
+backend/coverage/
+backend/logs/
+backend/*.log
+backend/*.log.*
+backend/build/
+backend/dist/
+
+# General
+.DS_Store
+Thumbs.db
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor-specific
+.vscode/
+.idea/
