--- a/backend/package.json
+++ b/backend/package.json
@@ -12,10 +12,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.21.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
   },
-  "type": "module" 
+  "type": "module"
 }
